--- a/src/css/style.css
+++ b/src/css/style.css
@@ -261,3 +261,18 @@ footer {
   font-size: var(--small-font);
   padding: 1em;
 }
+
+
+/* for cart total */
+
+.hide {
+  display: none;
+}
+
+.cart-footer {
+  margin-top: 1rem;
+  padding-top: 1rem;
+  border-top: 1px solid #ccc;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
