--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,24 @@ p {
   background-color: white;
 }
 
+.product-list img {
+  width: 30px;
+  height: 30px;
+}
+
+.product-list {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+
+}
+
+.product-list li a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .logo--square {
   font-size: var(--small-font);
   width: 110px;
