--- a/src/css/style.css
+++ b/src/css/style.css
@@ -206,10 +206,11 @@ button {
 /* Start cart list card styles */
 .cart-card {
   display: grid;
-  grid-template-columns: 25% auto 15%;
+  grid-template-columns: 25% auto 15% 10%;
   font-size: var(--small-font);
   /* max-height: 120px; */
   align-items: center;
+  position: relative;
 }
 
 .cart-card__image {
@@ -239,6 +240,11 @@ button {
 .cart-card__price {
   grid-row: 2;
   grid-column: 3;
+}
+
+.remove-item {
+  grid-row: 1/3;
+  grid-column: 4;
 }
 
 @media screen and (min-width: 500px) {
@@ -274,4 +280,28 @@ footer {
   border-top: 1px solid #ccc;
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.category-grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.category-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.category-card img {
+  width: 100%;
+  height: 30px;
+}
+
+.remove-item {
+  color: red;
+  padding: 5px;
+  box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.438);
+  text-align: center;
+  cursor: pointer;
 }
