--- a/src/css/style.css
+++ b/src/css/style.css
@@ -334,3 +334,12 @@ form button{
   width: 50%;
   margin-left: 40%;
 }
+
+#category-search{
+  width: 60%;
+  margin-left: 20%;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 20px;
+  height: 40px;
+}
